--- a/EleveSample/EleveSample.csproj
+++ b/EleveSample/EleveSample.csproj
@@ -66,8 +66,11 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="Actions\EleveSample\EleveSampleActionBase.cs" />
+    <Compile Include="Actions\EleveSample\End.cs" />
     <Compile Include="Actions\EleveSample\Hello.cs" />
     <Compile Include="Actions\EleveSample\Initialize.cs" />
+    <Compile Include="Actions\EleveSample\Start.cs" />
+    <Compile Include="Actions\EleveSample\TrackMouse.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
