--- a/EleveSample/EleveSample.csproj
+++ b/EleveSample/EleveSample.csproj
@@ -65,6 +65,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="Actions\EleveSample\Compute.cs" />
     <Compile Include="Actions\EleveSample\EleveSampleActionBase.cs" />
     <Compile Include="Actions\EleveSample\End.cs" />
     <Compile Include="Actions\EleveSample\Hello.cs" />
