--- a/EleveSample/EleveSample.csproj
+++ b/EleveSample/EleveSample.csproj
@@ -66,6 +66,7 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="Actions\EleveSample\Compute.cs" />
+    <Compile Include="Actions\EleveSample\Eleve.ActionTemplate1.cs" />
     <Compile Include="Actions\EleveSample\EleveSampleActionBase.cs" />
     <Compile Include="Actions\EleveSample\End.cs" />
     <Compile Include="Actions\EleveSample\Hello.cs" />
