--- a/Eleve.ViewModelTemplate/Eleve.ViewModelTemplate.csproj
+++ b/Eleve.ViewModelTemplate/Eleve.ViewModelTemplate.csproj
@@ -10,11 +10,11 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{FC5FD105-5B21-41DA-9AE5-EF45616CA173}</ProjectGuid>
+    <ProjectGuid>{1134FC1C-BD48-4F0E-9899-7B2F9E3313FB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Eleve.ItemTemplate</RootNamespace>
-    <AssemblyName>Eleve.ItemTemplate</AssemblyName>
+    <RootNamespace>Eleve.ViewModelTemplate</RootNamespace>
+    <AssemblyName>Eleve.ViewModelTemplate</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <GeneratePkgDefFile>false</GeneratePkgDefFile>
@@ -58,13 +58,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Action.cs" />
-    <None Include="Eleve.ItemTemplate.ico" />
+    <None Include="ViewModel.cs" />
+    <None Include="Eleve.ViewModelTemplate.ico" />
   </ItemGroup>
   <ItemGroup>
-    <VSTemplate Include="Eleve.ItemTemplate.vstemplate">
-      <SubType>Designer</SubType>
-    </VSTemplate>
+    <VSTemplate Include="Eleve.ViewModelTemplate.vstemplate" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
