--- a/Eleve/Eleve.csproj
+++ b/Eleve/Eleve.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewBase.cs" />
     <Compile Include="ViewModelBase.cs" />
+    <Compile Include="WindowCloseType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
