--- a/EleveProjectTemplate/EleveProjectTemplate.csproj
+++ b/EleveProjectTemplate/EleveProjectTemplate.csproj
@@ -63,9 +63,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <None Include="Initialize.cs" />
-    <None Include="SampleActionBase.cs" />
-    <None Include="SampleViewModel.cs" />
+    <None Include="Views\SampleView.xaml.cs">
+      <DependentUpon>SampleView.xaml</DependentUpon>
+    </None>
+    <None Include="Actions\Initialize.cs" />
+    <None Include="Actions\SampleActionBase.cs" />
+    <None Include="ViewModels\SampleViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="AssemblyInfo.cs" />
@@ -74,6 +77,12 @@
   </ItemGroup>
   <ItemGroup>
     <VSTemplate Include="EleveProjectTemplate.vstemplate" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Views\SampleView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
