--- a/EleveProjectTemplate/ProjectTemplate.csproj
+++ b/EleveProjectTemplate/ProjectTemplate.csproj
@@ -38,6 +38,10 @@
 		<Reference Include="Microsoft.CSharp"/>
 		<Reference Include="System.Data"/>
 		<Reference Include="System.Xml"/>
+    <Reference Include="System.Xaml"/>
+    <Reference Include="WindowsBase" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Include="ViewModels\$safeprojectname$ViewModel.cs" />
