--- a/EleveProjectTemplate/EleveProjectTemplate.csproj
+++ b/EleveProjectTemplate/EleveProjectTemplate.csproj
@@ -62,7 +62,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.xaml.cs">
+      <DependentUpon>App.xaml</DependentUpon>
+    </None>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Views\SampleView.xaml.cs">
       <DependentUpon>SampleView.xaml</DependentUpon>
     </None>
@@ -84,6 +90,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Views\SampleView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </None>
