--- a/EleveProjectTemplate/ProjectTemplate.csproj
+++ b/EleveProjectTemplate/ProjectTemplate.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Windows.Interactivity.WPF.2.0.20525\lib\net40\System.Windows.Interactivity.dll</HintPath>
     </Reference>
+    <Reference Include="Eleve">
+      <HintPath>..\packages\Eleve.0.1.0\lib\net45\Eleve.dll</HintPath>
+    </Reference>
 	</ItemGroup>
 	<ItemGroup>
     <None Include="App.config" />
