--- a/Eleve.Extensibility/Eleve.Extensibility.csproj
+++ b/Eleve.Extensibility/Eleve.Extensibility.csproj
@@ -53,6 +53,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html" />
+    <Content Include="LICENSE.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="stylesheet.css" />
   </ItemGroup>
   <ItemGroup>
