--- a/Eleve/Eleve.csproj
+++ b/Eleve/Eleve.csproj
@@ -59,6 +59,7 @@
     <Compile Include="WindowCloseType.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Eleve.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
