--- a/Eleve/Eleve.nuspec
+++ b/Eleve/Eleve.nuspec
@@ -2,13 +2,13 @@
 <package >
   <metadata>
     <id>Eleve</id>
-    <version>0.1</version>
+    <version>0.1.2</version>
     <title>Eleve</title>
     <authors>basyura</authors>
     <owners>basyura</owners>
-    <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
+    <licenseUrl>https://raw.githubusercontent.com/basyura/Eleve/master/LICENSE.txt</licenseUrl>
+    <projectUrl>https://github.com/basyura/Eleve</projectUrl>
+    <iconUrl>https://github.com/basyura</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Ore Ore MVVM Framework</description>
     <releaseNotes>beta version</releaseNotes>
