--- a/Eleve/Eleve.csproj
+++ b/Eleve/Eleve.csproj
@@ -59,7 +59,9 @@
     <Compile Include="WindowCloseType.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Eleve.nuspec" />
+    <None Include="Eleve.nuspec">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
