--- a/EleveSample/EleveSample.csproj
+++ b/EleveSample/EleveSample.csproj
@@ -60,6 +60,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Actions\EleveSample\Closing.cs" />
+    <Compile Include="Actions\EleveSample\Delete.cs" />
     <Compile Include="Actions\EleveSample\Error.cs" />
     <Compile Include="Actions\EleveSample\OpenItemSelector.cs" />
     <Compile Include="Actions\ItemSelector\Initialize.cs" />
