--- a/EleveProjectTemplate/ProjectTemplate.csproj
+++ b/EleveProjectTemplate/ProjectTemplate.csproj
@@ -43,15 +43,6 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="Microsoft.Expression.Interactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Windows.Interactivity.WPF.2.0.20525\lib\net40\Microsoft.Expression.Interactions.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Windows.Interactivity.WPF.2.0.20525\lib\net40\System.Windows.Interactivity.dll</HintPath>
-    </Reference>
-    <Reference Include="Eleve">
-      <HintPath>..\packages\Eleve.0.1.4\lib\net45\Eleve.dll</HintPath>
-    </Reference>
 	</ItemGroup>
 	<ItemGroup>
     <None Include="App.config" />
@@ -77,7 +68,12 @@
     </ApplicationDefinition>
 	</ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <PackageReference Include="Eleve">
+      <Version>0.2.1</Version>
+    </PackageReference>
+    <PackageReference Include="System.Windows.Interactivity.WPF">
+      <Version>2.0.20525</Version>
+    </PackageReference>
   </ItemGroup>
 	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
