--- a/Eleve/Eleve.csproj
+++ b/Eleve/Eleve.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewBase.cs" />
     <Compile Include="ViewModelBase.cs" />
+    <Compile Include="WindowCloseResult.cs" />
     <Compile Include="WindowCloseType.cs" />
   </ItemGroup>
   <ItemGroup>
