--- a/EleveSample.Test/EleveSample.Test.csproj
+++ b/EleveSample.Test/EleveSample.Test.csproj
@@ -38,13 +38,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions\ActionTestBase.cs" />
     <Compile Include="Actions\InitializeTest.cs" />
     <Compile Include="Actions\ShowMessageTest.cs" />
+    <Compile Include="Actions\HelloTest.cs" />
+    <Compile Include="Actions\SelectPersonTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
