--- a/EleveSample/EleveSample.csproj
+++ b/EleveSample/EleveSample.csproj
@@ -53,6 +53,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Actions\EleveSample\Activated.cs" />
     <Compile Include="Actions\EleveSample\Closing.cs" />
     <Compile Include="Actions\EleveSample\Delete.cs" />
     <Compile Include="Actions\EleveSample\Error.cs" />
