--- a/TweetWPF/TweetWPF/TweetWPF.csproj
+++ b/TweetWPF/TweetWPF/TweetWPF.csproj
@@ -57,9 +57,10 @@
     <Compile Include="Actions\Tweetline\ShowDetail.cs" />
     <Compile Include="Actions\Tweetline\TImelineActionBase.cs" />
     <Compile Include="Actions\TweetWPF\BackToTimeline.cs" />
+    <Compile Include="Actions\TweetWPF\ClickTab.cs" />
     <Compile Include="Actions\TweetWPF\PostTweet.cs" />
     <Compile Include="Actions\TweetWPF\SelectTweetMenu.cs" />
-    <Compile Include="Actions\TweetWPF\ShowHome.cs" />
+    <Compile Include="Actions\TweetWPF\ChangeTab.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -69,6 +70,9 @@
     <Compile Include="Controls\Coverters\ScreenNameConverter.cs" />
     <Compile Include="Controls\Coverters\SelectedTabItemConverter.cs" />
     <Compile Include="Extensions\DependencyObjectExtension.cs" />
+    <Compile Include="Models\NavigateMode.cs" />
+    <Compile Include="Models\NavigateParam.cs" />
+    <Compile Include="Models\TweetTab.cs" />
     <Compile Include="ViewModels\TweetDetailViewModel.cs" />
     <Compile Include="Views\TweetDetailView.xaml.cs">
       <DependentUpon>TweetDetailView.xaml</DependentUpon>
